integrated java mail service. create and modify appointment database methods. change appointment repository data type to string.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.data.mongodb.database=Job_Seeker
 server.port=3269
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=flexiart.info@gmail.com
+spring.mail.password=oxgnsvyzhcqhszfd
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#I used my company email to sent emails.
