Dockerfile port changed. Connected with atlas cluster

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+# uncomment following lines to run on localhost
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+
+spring.data.mongodb.uri=mongodb+srv://assignment:Assignment06BatchICBT@jobseeker.fv0la8q.mongodb.net/Job_Seeker?retryWrites=true&w=majority
 spring.data.mongodb.database=Job_Seeker
 
 server.port=3269
