--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-/.vscode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+.vscode/
 
 # Miscellaneous
 /.angular/cache
